Initial branching of CometD 5, based on Jetty 10.0.x.